css path modified

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="description" content="Affordable and professional Web Design">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Acme Web Design/Style.css">
+    <link rel="stylesheet" href="Style.css">
   </head>
   <body>
     <header>
